reference/5.1/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: 描述適用于 .NET framework 類別的型別加速器
keywords: powershell,cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 21093f3a649212526c3fc3eb5405e2a7ce6e49f3
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: zh-TW
ms.lasthandoff: 10/13/2020
ms.locfileid: "93207519"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="d6399-104">關於類型加速器</span><span class="sxs-lookup"><span data-stu-id="d6399-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="d6399-105">簡短說明</span><span class="sxs-lookup"><span data-stu-id="d6399-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="d6399-106">描述適用于 .NET framework 類別的型別加速器</span><span class="sxs-lookup"><span data-stu-id="d6399-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="d6399-107">詳細描述</span><span class="sxs-lookup"><span data-stu-id="d6399-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="d6399-108">型別加速器是 .NET framework 類別的別名。</span><span class="sxs-lookup"><span data-stu-id="d6399-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="d6399-109">它們可讓您存取特定的 .NET framework 類別，而不需要明確地輸入整個類別名稱。</span><span class="sxs-lookup"><span data-stu-id="d6399-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="d6399-110">例如，您可以將的 **AliasAttribute** 類別縮短 `[System.Management.Automation.AliasAttribute]` 為 `[Alias]` 。</span><span class="sxs-lookup"><span data-stu-id="d6399-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="d6399-111">所有類型加速器仍需要以方括弧括住 (`[]`) 。</span><span class="sxs-lookup"><span data-stu-id="d6399-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="d6399-112">可用的型別加速器</span><span class="sxs-lookup"><span data-stu-id="d6399-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="d6399-113">加速器</span><span class="sxs-lookup"><span data-stu-id="d6399-113">Accelerator</span></span>          |                           <span data-ttu-id="d6399-114">完整類別名稱</span><span class="sxs-lookup"><span data-stu-id="d6399-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="d6399-115">編輯器</span><span class="sxs-lookup"><span data-stu-id="d6399-115">adsi</span></span>                         | <span data-ttu-id="d6399-116">DirectoryServices</span><span class="sxs-lookup"><span data-stu-id="d6399-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="d6399-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="d6399-117">adsisearcher</span></span>                 | <span data-ttu-id="d6399-118">DirectoryServices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="d6399-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="d6399-119">Alias</span><span class="sxs-lookup"><span data-stu-id="d6399-119">Alias</span></span>                        | <span data-ttu-id="d6399-120">AliasAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="d6399-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="d6399-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="d6399-122">AllowEmptyCollectionAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="d6399-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="d6399-123">AllowEmptyString</span></span>             | <span data-ttu-id="d6399-124">AllowEmptyStringAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="d6399-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="d6399-125">AllowNull</span></span>                    | <span data-ttu-id="d6399-126">AllowNullAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="d6399-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="d6399-127">ArgumentCompleter</span></span>            | <span data-ttu-id="d6399-128">ArgumentCompleterAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="d6399-129">array</span><span class="sxs-lookup"><span data-stu-id="d6399-129">array</span></span>                        | <span data-ttu-id="d6399-130">System.Array</span><span class="sxs-lookup"><span data-stu-id="d6399-130">System.Array</span></span>                                                        |
|<span data-ttu-id="d6399-131">bigint</span><span class="sxs-lookup"><span data-stu-id="d6399-131">bigint</span></span>                       | <span data-ttu-id="d6399-132">BigInteger</span><span class="sxs-lookup"><span data-stu-id="d6399-132">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="d6399-133">bool</span><span class="sxs-lookup"><span data-stu-id="d6399-133">bool</span></span>                         | <span data-ttu-id="d6399-134">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="d6399-134">System.Boolean</span></span>                                                      |
|<span data-ttu-id="d6399-135">byte</span><span class="sxs-lookup"><span data-stu-id="d6399-135">byte</span></span>                         | <span data-ttu-id="d6399-136">System.Byte</span><span class="sxs-lookup"><span data-stu-id="d6399-136">System.Byte</span></span>                                                         |
|<span data-ttu-id="d6399-137">char</span><span class="sxs-lookup"><span data-stu-id="d6399-137">char</span></span>                         | <span data-ttu-id="d6399-138">System.Char</span><span class="sxs-lookup"><span data-stu-id="d6399-138">System.Char</span></span>                                                         |
|<span data-ttu-id="d6399-139">cimclass</span><span class="sxs-lookup"><span data-stu-id="d6399-139">cimclass</span></span>                     | <span data-ttu-id="d6399-140">CimClass。</span><span class="sxs-lookup"><span data-stu-id="d6399-140">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="d6399-141">cimconverter</span><span class="sxs-lookup"><span data-stu-id="d6399-141">cimconverter</span></span>                 | <span data-ttu-id="d6399-142">CimConverter。</span><span class="sxs-lookup"><span data-stu-id="d6399-142">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="d6399-143">ciminstance</span><span class="sxs-lookup"><span data-stu-id="d6399-143">ciminstance</span></span>                  | <span data-ttu-id="d6399-144">Microsoft.Management.Infrastructure.CimInstance</span><span class="sxs-lookup"><span data-stu-id="d6399-144">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="d6399-145">CimSession</span><span class="sxs-lookup"><span data-stu-id="d6399-145">CimSession</span></span>                   | <span data-ttu-id="d6399-146">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="d6399-146">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="d6399-147">cimtype</span><span class="sxs-lookup"><span data-stu-id="d6399-147">cimtype</span></span>                      | <span data-ttu-id="d6399-148">CimType。</span><span class="sxs-lookup"><span data-stu-id="d6399-148">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="d6399-149">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="d6399-149">CmdletBinding</span></span>                | <span data-ttu-id="d6399-150">CmdletBindingAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-150">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="d6399-151">cultureinfo</span><span class="sxs-lookup"><span data-stu-id="d6399-151">cultureinfo</span></span>                  | <span data-ttu-id="d6399-152">System.Globalization.CultureInfo</span><span class="sxs-lookup"><span data-stu-id="d6399-152">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="d6399-153">Datetime</span><span class="sxs-lookup"><span data-stu-id="d6399-153">datetime</span></span>                     | <span data-ttu-id="d6399-154">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="d6399-154">System.DateTime</span></span>                                                     |
|<span data-ttu-id="d6399-155">decimal</span><span class="sxs-lookup"><span data-stu-id="d6399-155">decimal</span></span>                      | <span data-ttu-id="d6399-156">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="d6399-156">System.Decimal</span></span>                                                      |
|<span data-ttu-id="d6399-157">double</span><span class="sxs-lookup"><span data-stu-id="d6399-157">double</span></span>                       | <span data-ttu-id="d6399-158">System.Double</span><span class="sxs-lookup"><span data-stu-id="d6399-158">System.Double</span></span>                                                       |
|<span data-ttu-id="d6399-159">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="d6399-159">DscLocalConfigurationManager</span></span> | <span data-ttu-id="d6399-160">DscLocalConfigurationManagerAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-160">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="d6399-161">DscProperty</span><span class="sxs-lookup"><span data-stu-id="d6399-161">DscProperty</span></span>                  | <span data-ttu-id="d6399-162">DscPropertyAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-162">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="d6399-163">DscResource</span><span class="sxs-lookup"><span data-stu-id="d6399-163">DscResource</span></span>                  | <span data-ttu-id="d6399-164">DscResourceAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-164">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="d6399-165">float</span><span class="sxs-lookup"><span data-stu-id="d6399-165">float</span></span>                        | <span data-ttu-id="d6399-166">System.Single</span><span class="sxs-lookup"><span data-stu-id="d6399-166">System.Single</span></span>                                                       |
|<span data-ttu-id="d6399-167">guid</span><span class="sxs-lookup"><span data-stu-id="d6399-167">guid</span></span>                         | <span data-ttu-id="d6399-168">System.Guid</span><span class="sxs-lookup"><span data-stu-id="d6399-168">System.Guid</span></span>                                                         |
|<span data-ttu-id="d6399-169">雜湊表</span><span class="sxs-lookup"><span data-stu-id="d6399-169">hashtable</span></span>                    | <span data-ttu-id="d6399-170">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="d6399-170">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="d6399-171">>initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="d6399-171">initialsessionstate</span></span>          | <span data-ttu-id="d6399-172">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="d6399-172">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="d6399-173">int</span><span class="sxs-lookup"><span data-stu-id="d6399-173">int</span></span>                          | <span data-ttu-id="d6399-174">System.Int32</span><span class="sxs-lookup"><span data-stu-id="d6399-174">System.Int32</span></span>                                                        |
|<span data-ttu-id="d6399-175">int16</span><span class="sxs-lookup"><span data-stu-id="d6399-175">int16</span></span>                        | <span data-ttu-id="d6399-176">System.Int16</span><span class="sxs-lookup"><span data-stu-id="d6399-176">System.Int16</span></span>                                                        |
|<span data-ttu-id="d6399-177">int32</span><span class="sxs-lookup"><span data-stu-id="d6399-177">int32</span></span>                        | <span data-ttu-id="d6399-178">System.Int32</span><span class="sxs-lookup"><span data-stu-id="d6399-178">System.Int32</span></span>                                                        |
|<span data-ttu-id="d6399-179">int64</span><span class="sxs-lookup"><span data-stu-id="d6399-179">int64</span></span>                        | <span data-ttu-id="d6399-180">System.Int64</span><span class="sxs-lookup"><span data-stu-id="d6399-180">System.Int64</span></span>                                                        |
|<span data-ttu-id="d6399-181">址</span><span class="sxs-lookup"><span data-stu-id="d6399-181">ipaddress</span></span>                    | <span data-ttu-id="d6399-182">系統 .Net IPAddress</span><span class="sxs-lookup"><span data-stu-id="d6399-182">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="d6399-183">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="d6399-183">IPEndpoint</span></span>                   | <span data-ttu-id="d6399-184">System .Net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="d6399-184">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="d6399-185">long</span><span class="sxs-lookup"><span data-stu-id="d6399-185">long</span></span>                         | <span data-ttu-id="d6399-186">System.Int64</span><span class="sxs-lookup"><span data-stu-id="d6399-186">System.Int64</span></span>                                                        |
|<span data-ttu-id="d6399-187">mailaddress</span><span class="sxs-lookup"><span data-stu-id="d6399-187">mailaddress</span></span>                  | <span data-ttu-id="d6399-188">系統 .Net MailAddress</span><span class="sxs-lookup"><span data-stu-id="d6399-188">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="d6399-189">NullString</span><span class="sxs-lookup"><span data-stu-id="d6399-189">NullString</span></span>                   | <span data-ttu-id="d6399-190">NullString （英文）</span><span class="sxs-lookup"><span data-stu-id="d6399-190">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="d6399-191">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="d6399-191">ObjectSecurity</span></span>               | <span data-ttu-id="d6399-192">AccessControl. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="d6399-192">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="d6399-193">OutputType</span><span class="sxs-lookup"><span data-stu-id="d6399-193">OutputType</span></span>                   | <span data-ttu-id="d6399-194">OutputTypeAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-194">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="d6399-195">參數</span><span class="sxs-lookup"><span data-stu-id="d6399-195">Parameter</span></span>                    | <span data-ttu-id="d6399-196">ParameterAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-196">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="d6399-197">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="d6399-197">PhysicalAddress</span></span>              | <span data-ttu-id="d6399-198">System.net.networkinformation.networkinformationexception. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="d6399-198">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="d6399-199">powershell</span><span class="sxs-lookup"><span data-stu-id="d6399-199">powershell</span></span>                   | <span data-ttu-id="d6399-200">系統管理。 PowerShell</span><span class="sxs-lookup"><span data-stu-id="d6399-200">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="d6399-201">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="d6399-201">psaliasproperty</span></span>              | <span data-ttu-id="d6399-202">PSAliasProperty。</span><span class="sxs-lookup"><span data-stu-id="d6399-202">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="d6399-203">pscredential</span><span class="sxs-lookup"><span data-stu-id="d6399-203">pscredential</span></span>                 | <span data-ttu-id="d6399-204">System.Management.Automation.PSCredential</span><span class="sxs-lookup"><span data-stu-id="d6399-204">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="d6399-205">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="d6399-205">pscustomobject</span></span>               | <span data-ttu-id="d6399-206">System.Management.Automation.PSObject</span><span class="sxs-lookup"><span data-stu-id="d6399-206">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="d6399-207">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="d6399-207">PSDefaultValue</span></span>               | <span data-ttu-id="d6399-208">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="d6399-208">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="d6399-209">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="d6399-209">pslistmodifier</span></span>               | <span data-ttu-id="d6399-210">PSListModifier。</span><span class="sxs-lookup"><span data-stu-id="d6399-210">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="d6399-211">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="d6399-211">psmoduleinfo</span></span>                 | <span data-ttu-id="d6399-212">System.Management.Automation.PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="d6399-212">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="d6399-213">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="d6399-213">psnoteproperty</span></span>               | <span data-ttu-id="d6399-214">PSNoteProperty。</span><span class="sxs-lookup"><span data-stu-id="d6399-214">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="d6399-215">psobject</span><span class="sxs-lookup"><span data-stu-id="d6399-215">psobject</span></span>                     | <span data-ttu-id="d6399-216">System.Management.Automation.PSObject</span><span class="sxs-lookup"><span data-stu-id="d6399-216">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="d6399-217">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="d6399-217">psprimitivedictionary</span></span>        | <span data-ttu-id="d6399-218">PSPrimitiveDictionary。</span><span class="sxs-lookup"><span data-stu-id="d6399-218">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="d6399-219">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="d6399-219">psscriptmethod</span></span>               | <span data-ttu-id="d6399-220">PSScriptMethod。</span><span class="sxs-lookup"><span data-stu-id="d6399-220">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="d6399-221">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="d6399-221">psscriptproperty</span></span>             | <span data-ttu-id="d6399-222">PSScriptProperty。</span><span class="sxs-lookup"><span data-stu-id="d6399-222">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="d6399-223">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="d6399-223">PSTypeNameAttribute</span></span>          | <span data-ttu-id="d6399-224">PSTypeNameAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-224">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="d6399-225">system.management.automation.psvariable</span><span class="sxs-lookup"><span data-stu-id="d6399-225">psvariable</span></span>                   | <span data-ttu-id="d6399-226">System.Management.Automation.PSVariable</span><span class="sxs-lookup"><span data-stu-id="d6399-226">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="d6399-227">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="d6399-227">psvariableproperty</span></span>           | <span data-ttu-id="d6399-228">PSVariableProperty。</span><span class="sxs-lookup"><span data-stu-id="d6399-228">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="d6399-229">ref</span><span class="sxs-lookup"><span data-stu-id="d6399-229">ref</span></span>                          | <span data-ttu-id="d6399-230">PSReference。</span><span class="sxs-lookup"><span data-stu-id="d6399-230">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="d6399-231">RegEx</span><span class="sxs-lookup"><span data-stu-id="d6399-231">regex</span></span>                        | <span data-ttu-id="d6399-232">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="d6399-232">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="d6399-233">Runspace</span><span class="sxs-lookup"><span data-stu-id="d6399-233">runspace</span></span>                     | <span data-ttu-id="d6399-234">系統管理。運行空間</span><span class="sxs-lookup"><span data-stu-id="d6399-234">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="d6399-235">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="d6399-235">runspacefactory</span></span>              | <span data-ttu-id="d6399-236">RunspaceFactory 的管理。</span><span class="sxs-lookup"><span data-stu-id="d6399-236">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="d6399-237">sbyte</span><span class="sxs-lookup"><span data-stu-id="d6399-237">sbyte</span></span>                        | <span data-ttu-id="d6399-238">System.SByte</span><span class="sxs-lookup"><span data-stu-id="d6399-238">System.SByte</span></span>                                                        |
|<span data-ttu-id="d6399-239">scriptblock</span><span class="sxs-lookup"><span data-stu-id="d6399-239">scriptblock</span></span>                  | <span data-ttu-id="d6399-240">系統管理. ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="d6399-240">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="d6399-241">securestring</span><span class="sxs-lookup"><span data-stu-id="d6399-241">securestring</span></span>                 | <span data-ttu-id="d6399-242">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="d6399-242">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="d6399-243">single</span><span class="sxs-lookup"><span data-stu-id="d6399-243">single</span></span>                       | <span data-ttu-id="d6399-244">System.Single</span><span class="sxs-lookup"><span data-stu-id="d6399-244">System.Single</span></span>                                                       |
|<span data-ttu-id="d6399-245">字串</span><span class="sxs-lookup"><span data-stu-id="d6399-245">string</span></span>                       | <span data-ttu-id="d6399-246">System.String</span><span class="sxs-lookup"><span data-stu-id="d6399-246">System.String</span></span>                                                       |
|<span data-ttu-id="d6399-247">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="d6399-247">SupportsWildcards</span></span>            | <span data-ttu-id="d6399-248">SupportsWildcardsAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-248">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="d6399-249">switch</span><span class="sxs-lookup"><span data-stu-id="d6399-249">switch</span></span>                       | <span data-ttu-id="d6399-250">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="d6399-250">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="d6399-251">時間範圍</span><span class="sxs-lookup"><span data-stu-id="d6399-251">timespan</span></span>                     | <span data-ttu-id="d6399-252">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="d6399-252">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="d6399-253">類型</span><span class="sxs-lookup"><span data-stu-id="d6399-253">type</span></span>                         | <span data-ttu-id="d6399-254">System.Type</span><span class="sxs-lookup"><span data-stu-id="d6399-254">System.Type</span></span>                                                         |
|<span data-ttu-id="d6399-255">uint16</span><span class="sxs-lookup"><span data-stu-id="d6399-255">uint16</span></span>                       | <span data-ttu-id="d6399-256">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="d6399-256">System.UInt16</span></span>                                                       |
|<span data-ttu-id="d6399-257">uint32</span><span class="sxs-lookup"><span data-stu-id="d6399-257">uint32</span></span>                       | <span data-ttu-id="d6399-258">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="d6399-258">System.UInt32</span></span>                                                       |
|<span data-ttu-id="d6399-259">uint64</span><span class="sxs-lookup"><span data-stu-id="d6399-259">uint64</span></span>                       | <span data-ttu-id="d6399-260">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="d6399-260">System.UInt64</span></span>                                                       |
|<span data-ttu-id="d6399-261">uri</span><span class="sxs-lookup"><span data-stu-id="d6399-261">uri</span></span>                          | <span data-ttu-id="d6399-262">System.Uri</span><span class="sxs-lookup"><span data-stu-id="d6399-262">System.Uri</span></span>                                                          |
|<span data-ttu-id="d6399-263">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="d6399-263">ValidateCount</span></span>                | <span data-ttu-id="d6399-264">ValidateCountAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-264">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="d6399-265">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="d6399-265">ValidateDrive</span></span>                | <span data-ttu-id="d6399-266">ValidateDriveAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-266">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="d6399-267">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="d6399-267">ValidateLength</span></span>               | <span data-ttu-id="d6399-268">ValidateLengthAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-268">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="d6399-269">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="d6399-269">ValidateNotNull</span></span>              | <span data-ttu-id="d6399-270">ValidateNotNullAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-270">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="d6399-271">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="d6399-271">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="d6399-272">ValidateNotNullOrEmptyAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-272">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="d6399-273">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="d6399-273">ValidatePattern</span></span>              | <span data-ttu-id="d6399-274">ValidatePatternAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-274">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="d6399-275">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="d6399-275">ValidateRange</span></span>                | <span data-ttu-id="d6399-276">ValidateRangeAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-276">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="d6399-277">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="d6399-277">ValidateScript</span></span>               | <span data-ttu-id="d6399-278">ValidateScriptAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-278">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="d6399-279">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="d6399-279">ValidateSet</span></span>                  | <span data-ttu-id="d6399-280">ValidateSetAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-280">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="d6399-281">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="d6399-281">ValidateTrustedData</span></span>          | <span data-ttu-id="d6399-282">ValidateTrustedDataAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-282">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="d6399-283">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="d6399-283">ValidateUserDrive</span></span>            | <span data-ttu-id="d6399-284">ValidateUserDriveAttribute。</span><span class="sxs-lookup"><span data-stu-id="d6399-284">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="d6399-285">version</span><span class="sxs-lookup"><span data-stu-id="d6399-285">version</span></span>                      | <span data-ttu-id="d6399-286">System.Version</span><span class="sxs-lookup"><span data-stu-id="d6399-286">System.Version</span></span>                                                      |
|<span data-ttu-id="d6399-287">void</span><span class="sxs-lookup"><span data-stu-id="d6399-287">void</span></span>                         | <span data-ttu-id="d6399-288">System.Void</span><span class="sxs-lookup"><span data-stu-id="d6399-288">System.Void</span></span>                                                         |
|<span data-ttu-id="d6399-289">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="d6399-289">WildcardPattern</span></span>              | <span data-ttu-id="d6399-290">WildcardPattern。</span><span class="sxs-lookup"><span data-stu-id="d6399-290">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="d6399-291">Wmi</span><span class="sxs-lookup"><span data-stu-id="d6399-291">wmi</span></span>                          | <span data-ttu-id="d6399-292">System.Management.ManagementObject</span><span class="sxs-lookup"><span data-stu-id="d6399-292">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="d6399-293">wmiclass</span><span class="sxs-lookup"><span data-stu-id="d6399-293">wmiclass</span></span>                     | <span data-ttu-id="d6399-294">ManagementClass</span><span class="sxs-lookup"><span data-stu-id="d6399-294">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="d6399-295">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="d6399-295">wmisearcher</span></span>                  | <span data-ttu-id="d6399-296">ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="d6399-296">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="d6399-297">System.security.cryptography.x509certificates.x500distinguishedname</span><span class="sxs-lookup"><span data-stu-id="d6399-297">X500DistinguishedName</span></span>        | <span data-ttu-id="d6399-298">System.security.cryptography.x509certificates.x509certificate2. System.security.cryptography.x509certificates.x500distinguishedname。</span><span class="sxs-lookup"><span data-stu-id="d6399-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="d6399-299">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="d6399-299">X509Certificate</span></span>              | <span data-ttu-id="d6399-300">System.security.cryptography.x509certificates.x509certificate2. X509Certificate。</span><span class="sxs-lookup"><span data-stu-id="d6399-300">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="d6399-301">xml</span><span class="sxs-lookup"><span data-stu-id="d6399-301">xml</span></span>                          | <span data-ttu-id="d6399-302">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="d6399-302">System.Xml.XmlDocument</span></span>                                              |
