reference/7.0/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: 描述適用于 .NET framework 類別的型別加速器
keywords: powershell,cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 6f73aa590b64cda5739a2a118b2b4c5a6c103a67
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: zh-TW
ms.lasthandoff: 10/13/2020
ms.locfileid: "93206768"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="8a6f2-104">關於類型加速器</span><span class="sxs-lookup"><span data-stu-id="8a6f2-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="8a6f2-105">簡短說明</span><span class="sxs-lookup"><span data-stu-id="8a6f2-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="8a6f2-106">描述適用于 .NET framework 類別的型別加速器</span><span class="sxs-lookup"><span data-stu-id="8a6f2-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="8a6f2-107">詳細描述</span><span class="sxs-lookup"><span data-stu-id="8a6f2-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="8a6f2-108">型別加速器是 .NET framework 類別的別名。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="8a6f2-109">它們可讓您存取特定的 .NET framework 類別，而不需要明確地輸入整個類別名稱。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="8a6f2-110">例如，您可以將的 **AliasAttribute** 類別縮短 `[System.Management.Automation.AliasAttribute]` 為 `[Alias]` 。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="8a6f2-111">所有類型加速器仍需要以方括弧括住 (`[]`) 。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="8a6f2-112">可用的型別加速器</span><span class="sxs-lookup"><span data-stu-id="8a6f2-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="8a6f2-113">加速器</span><span class="sxs-lookup"><span data-stu-id="8a6f2-113">Accelerator</span></span>          |                           <span data-ttu-id="8a6f2-114">完整類別名稱</span><span class="sxs-lookup"><span data-stu-id="8a6f2-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="8a6f2-115">編輯器</span><span class="sxs-lookup"><span data-stu-id="8a6f2-115">adsi</span></span>                         | <span data-ttu-id="8a6f2-116">DirectoryServices</span><span class="sxs-lookup"><span data-stu-id="8a6f2-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="8a6f2-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="8a6f2-117">adsisearcher</span></span>                 | <span data-ttu-id="8a6f2-118">DirectoryServices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="8a6f2-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="8a6f2-119">Alias</span><span class="sxs-lookup"><span data-stu-id="8a6f2-119">Alias</span></span>                        | <span data-ttu-id="8a6f2-120">AliasAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="8a6f2-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="8a6f2-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="8a6f2-122">AllowEmptyCollectionAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="8a6f2-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="8a6f2-123">AllowEmptyString</span></span>             | <span data-ttu-id="8a6f2-124">AllowEmptyStringAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="8a6f2-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="8a6f2-125">AllowNull</span></span>                    | <span data-ttu-id="8a6f2-126">AllowNullAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="8a6f2-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="8a6f2-127">ArgumentCompleter</span></span>            | <span data-ttu-id="8a6f2-128">ArgumentCompleterAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="8a6f2-129">ArgumentCompletions</span><span class="sxs-lookup"><span data-stu-id="8a6f2-129">ArgumentCompletions</span></span>          | <span data-ttu-id="8a6f2-130">ArgumentCompletionsAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-130">System.Management.Automation.ArgumentCompletionsAttribute</span></span>           |
|<span data-ttu-id="8a6f2-131">array</span><span class="sxs-lookup"><span data-stu-id="8a6f2-131">array</span></span>                        | <span data-ttu-id="8a6f2-132">System.Array</span><span class="sxs-lookup"><span data-stu-id="8a6f2-132">System.Array</span></span>                                                        |
|<span data-ttu-id="8a6f2-133">bigint</span><span class="sxs-lookup"><span data-stu-id="8a6f2-133">bigint</span></span>                       | <span data-ttu-id="8a6f2-134">BigInteger</span><span class="sxs-lookup"><span data-stu-id="8a6f2-134">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="8a6f2-135">bool</span><span class="sxs-lookup"><span data-stu-id="8a6f2-135">bool</span></span>                         | <span data-ttu-id="8a6f2-136">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="8a6f2-136">System.Boolean</span></span>                                                      |
|<span data-ttu-id="8a6f2-137">byte</span><span class="sxs-lookup"><span data-stu-id="8a6f2-137">byte</span></span>                         | <span data-ttu-id="8a6f2-138">System.Byte</span><span class="sxs-lookup"><span data-stu-id="8a6f2-138">System.Byte</span></span>                                                         |
|<span data-ttu-id="8a6f2-139">char</span><span class="sxs-lookup"><span data-stu-id="8a6f2-139">char</span></span>                         | <span data-ttu-id="8a6f2-140">System.Char</span><span class="sxs-lookup"><span data-stu-id="8a6f2-140">System.Char</span></span>                                                         |
|<span data-ttu-id="8a6f2-141">cimclass</span><span class="sxs-lookup"><span data-stu-id="8a6f2-141">cimclass</span></span>                     | <span data-ttu-id="8a6f2-142">CimClass。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-142">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="8a6f2-143">cimconverter</span><span class="sxs-lookup"><span data-stu-id="8a6f2-143">cimconverter</span></span>                 | <span data-ttu-id="8a6f2-144">CimConverter。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-144">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="8a6f2-145">ciminstance</span><span class="sxs-lookup"><span data-stu-id="8a6f2-145">ciminstance</span></span>                  | <span data-ttu-id="8a6f2-146">Microsoft.Management.Infrastructure.CimInstance</span><span class="sxs-lookup"><span data-stu-id="8a6f2-146">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="8a6f2-147">CimSession</span><span class="sxs-lookup"><span data-stu-id="8a6f2-147">CimSession</span></span>                   | <span data-ttu-id="8a6f2-148">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="8a6f2-148">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="8a6f2-149">cimtype</span><span class="sxs-lookup"><span data-stu-id="8a6f2-149">cimtype</span></span>                      | <span data-ttu-id="8a6f2-150">CimType。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-150">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="8a6f2-151">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="8a6f2-151">CmdletBinding</span></span>                | <span data-ttu-id="8a6f2-152">CmdletBindingAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-152">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="8a6f2-153">cultureinfo</span><span class="sxs-lookup"><span data-stu-id="8a6f2-153">cultureinfo</span></span>                  | <span data-ttu-id="8a6f2-154">System.Globalization.CultureInfo</span><span class="sxs-lookup"><span data-stu-id="8a6f2-154">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="8a6f2-155">Datetime</span><span class="sxs-lookup"><span data-stu-id="8a6f2-155">datetime</span></span>                     | <span data-ttu-id="8a6f2-156">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="8a6f2-156">System.DateTime</span></span>                                                     |
|<span data-ttu-id="8a6f2-157">decimal</span><span class="sxs-lookup"><span data-stu-id="8a6f2-157">decimal</span></span>                      | <span data-ttu-id="8a6f2-158">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="8a6f2-158">System.Decimal</span></span>                                                      |
|<span data-ttu-id="8a6f2-159">double</span><span class="sxs-lookup"><span data-stu-id="8a6f2-159">double</span></span>                       | <span data-ttu-id="8a6f2-160">System.Double</span><span class="sxs-lookup"><span data-stu-id="8a6f2-160">System.Double</span></span>                                                       |
|<span data-ttu-id="8a6f2-161">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="8a6f2-161">DscLocalConfigurationManager</span></span> | <span data-ttu-id="8a6f2-162">DscLocalConfigurationManagerAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-162">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="8a6f2-163">DscProperty</span><span class="sxs-lookup"><span data-stu-id="8a6f2-163">DscProperty</span></span>                  | <span data-ttu-id="8a6f2-164">DscPropertyAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-164">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="8a6f2-165">DscResource</span><span class="sxs-lookup"><span data-stu-id="8a6f2-165">DscResource</span></span>                  | <span data-ttu-id="8a6f2-166">DscResourceAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-166">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="8a6f2-167">ExperimentAction</span><span class="sxs-lookup"><span data-stu-id="8a6f2-167">ExperimentAction</span></span>             | <span data-ttu-id="8a6f2-168">ExperimentAction。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-168">System.Management.Automation.ExperimentAction</span></span>                       |
|<span data-ttu-id="8a6f2-169">實驗</span><span class="sxs-lookup"><span data-stu-id="8a6f2-169">Experimental</span></span>                 | <span data-ttu-id="8a6f2-170">Core.experimentalattribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-170">System.Management.Automation.ExperimentalAttribute</span></span>                  |
|<span data-ttu-id="8a6f2-171">ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="8a6f2-171">ExperimentalFeature</span></span>          | <span data-ttu-id="8a6f2-172">ExperimentalFeature。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-172">System.Management.Automation.ExperimentalFeature</span></span>                    |
|<span data-ttu-id="8a6f2-173">float</span><span class="sxs-lookup"><span data-stu-id="8a6f2-173">float</span></span>                        | <span data-ttu-id="8a6f2-174">System.Single</span><span class="sxs-lookup"><span data-stu-id="8a6f2-174">System.Single</span></span>                                                       |
|<span data-ttu-id="8a6f2-175">guid</span><span class="sxs-lookup"><span data-stu-id="8a6f2-175">guid</span></span>                         | <span data-ttu-id="8a6f2-176">System.Guid</span><span class="sxs-lookup"><span data-stu-id="8a6f2-176">System.Guid</span></span>                                                         |
|<span data-ttu-id="8a6f2-177">雜湊表</span><span class="sxs-lookup"><span data-stu-id="8a6f2-177">hashtable</span></span>                    | <span data-ttu-id="8a6f2-178">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="8a6f2-178">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="8a6f2-179">>initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="8a6f2-179">initialsessionstate</span></span>          | <span data-ttu-id="8a6f2-180">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="8a6f2-180">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="8a6f2-181">int</span><span class="sxs-lookup"><span data-stu-id="8a6f2-181">int</span></span>                          | <span data-ttu-id="8a6f2-182">System.Int32</span><span class="sxs-lookup"><span data-stu-id="8a6f2-182">System.Int32</span></span>                                                        |
|<span data-ttu-id="8a6f2-183">int16</span><span class="sxs-lookup"><span data-stu-id="8a6f2-183">int16</span></span>                        | <span data-ttu-id="8a6f2-184">System.Int16</span><span class="sxs-lookup"><span data-stu-id="8a6f2-184">System.Int16</span></span>                                                        |
|<span data-ttu-id="8a6f2-185">int32</span><span class="sxs-lookup"><span data-stu-id="8a6f2-185">int32</span></span>                        | <span data-ttu-id="8a6f2-186">System.Int32</span><span class="sxs-lookup"><span data-stu-id="8a6f2-186">System.Int32</span></span>                                                        |
|<span data-ttu-id="8a6f2-187">int64</span><span class="sxs-lookup"><span data-stu-id="8a6f2-187">int64</span></span>                        | <span data-ttu-id="8a6f2-188">System.Int64</span><span class="sxs-lookup"><span data-stu-id="8a6f2-188">System.Int64</span></span>                                                        |
|<span data-ttu-id="8a6f2-189">址</span><span class="sxs-lookup"><span data-stu-id="8a6f2-189">ipaddress</span></span>                    | <span data-ttu-id="8a6f2-190">系統 .Net IPAddress</span><span class="sxs-lookup"><span data-stu-id="8a6f2-190">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="8a6f2-191">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="8a6f2-191">IPEndpoint</span></span>                   | <span data-ttu-id="8a6f2-192">System .Net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="8a6f2-192">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="8a6f2-193">long</span><span class="sxs-lookup"><span data-stu-id="8a6f2-193">long</span></span>                         | <span data-ttu-id="8a6f2-194">System.Int64</span><span class="sxs-lookup"><span data-stu-id="8a6f2-194">System.Int64</span></span>                                                        |
|<span data-ttu-id="8a6f2-195">mailaddress</span><span class="sxs-lookup"><span data-stu-id="8a6f2-195">mailaddress</span></span>                  | <span data-ttu-id="8a6f2-196">系統 .Net MailAddress</span><span class="sxs-lookup"><span data-stu-id="8a6f2-196">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="8a6f2-197">NullString</span><span class="sxs-lookup"><span data-stu-id="8a6f2-197">NullString</span></span>                   | <span data-ttu-id="8a6f2-198">NullString （英文）</span><span class="sxs-lookup"><span data-stu-id="8a6f2-198">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="8a6f2-199">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="8a6f2-199">ObjectSecurity</span></span>               | <span data-ttu-id="8a6f2-200">AccessControl. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="8a6f2-200">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="8a6f2-201">OutputType</span><span class="sxs-lookup"><span data-stu-id="8a6f2-201">OutputType</span></span>                   | <span data-ttu-id="8a6f2-202">OutputTypeAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-202">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="8a6f2-203">參數</span><span class="sxs-lookup"><span data-stu-id="8a6f2-203">Parameter</span></span>                    | <span data-ttu-id="8a6f2-204">ParameterAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-204">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="8a6f2-205">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="8a6f2-205">PhysicalAddress</span></span>              | <span data-ttu-id="8a6f2-206">System.net.networkinformation.networkinformationexception. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="8a6f2-206">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="8a6f2-207">powershell</span><span class="sxs-lookup"><span data-stu-id="8a6f2-207">powershell</span></span>                   | <span data-ttu-id="8a6f2-208">系統管理。 PowerShell</span><span class="sxs-lookup"><span data-stu-id="8a6f2-208">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="8a6f2-209">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="8a6f2-209">psaliasproperty</span></span>              | <span data-ttu-id="8a6f2-210">PSAliasProperty。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-210">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="8a6f2-211">pscredential</span><span class="sxs-lookup"><span data-stu-id="8a6f2-211">pscredential</span></span>                 | <span data-ttu-id="8a6f2-212">System.Management.Automation.PSCredential</span><span class="sxs-lookup"><span data-stu-id="8a6f2-212">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="8a6f2-213">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="8a6f2-213">pscustomobject</span></span>               | <span data-ttu-id="8a6f2-214">System.Management.Automation.PSObject</span><span class="sxs-lookup"><span data-stu-id="8a6f2-214">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="8a6f2-215">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="8a6f2-215">PSDefaultValue</span></span>               | <span data-ttu-id="8a6f2-216">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="8a6f2-216">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="8a6f2-217">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="8a6f2-217">pslistmodifier</span></span>               | <span data-ttu-id="8a6f2-218">PSListModifier。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-218">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="8a6f2-219">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="8a6f2-219">psmoduleinfo</span></span>                 | <span data-ttu-id="8a6f2-220">System.Management.Automation.PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="8a6f2-220">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="8a6f2-221">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="8a6f2-221">psnoteproperty</span></span>               | <span data-ttu-id="8a6f2-222">PSNoteProperty。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-222">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="8a6f2-223">psobject</span><span class="sxs-lookup"><span data-stu-id="8a6f2-223">psobject</span></span>                     | <span data-ttu-id="8a6f2-224">System.Management.Automation.PSObject</span><span class="sxs-lookup"><span data-stu-id="8a6f2-224">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="8a6f2-225">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="8a6f2-225">psprimitivedictionary</span></span>        | <span data-ttu-id="8a6f2-226">PSPrimitiveDictionary。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-226">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="8a6f2-227">pspropertyexpression</span><span class="sxs-lookup"><span data-stu-id="8a6f2-227">pspropertyexpression</span></span>         | <span data-ttu-id="8a6f2-228">PSPropertyExpression。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-228">Microsoft.PowerShell.Commands.PSPropertyExpression</span></span>                  |
|<span data-ttu-id="8a6f2-229">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="8a6f2-229">psscriptmethod</span></span>               | <span data-ttu-id="8a6f2-230">PSScriptMethod。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-230">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="8a6f2-231">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="8a6f2-231">psscriptproperty</span></span>             | <span data-ttu-id="8a6f2-232">PSScriptProperty。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-232">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="8a6f2-233">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="8a6f2-233">PSTypeNameAttribute</span></span>          | <span data-ttu-id="8a6f2-234">PSTypeNameAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-234">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="8a6f2-235">system.management.automation.psvariable</span><span class="sxs-lookup"><span data-stu-id="8a6f2-235">psvariable</span></span>                   | <span data-ttu-id="8a6f2-236">System.Management.Automation.PSVariable</span><span class="sxs-lookup"><span data-stu-id="8a6f2-236">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="8a6f2-237">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="8a6f2-237">psvariableproperty</span></span>           | <span data-ttu-id="8a6f2-238">PSVariableProperty。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-238">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="8a6f2-239">ref</span><span class="sxs-lookup"><span data-stu-id="8a6f2-239">ref</span></span>                          | <span data-ttu-id="8a6f2-240">PSReference。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-240">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="8a6f2-241">RegEx</span><span class="sxs-lookup"><span data-stu-id="8a6f2-241">regex</span></span>                        | <span data-ttu-id="8a6f2-242">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="8a6f2-242">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="8a6f2-243">Runspace</span><span class="sxs-lookup"><span data-stu-id="8a6f2-243">runspace</span></span>                     | <span data-ttu-id="8a6f2-244">系統管理。運行空間</span><span class="sxs-lookup"><span data-stu-id="8a6f2-244">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="8a6f2-245">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="8a6f2-245">runspacefactory</span></span>              | <span data-ttu-id="8a6f2-246">RunspaceFactory 的管理。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-246">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="8a6f2-247">sbyte</span><span class="sxs-lookup"><span data-stu-id="8a6f2-247">sbyte</span></span>                        | <span data-ttu-id="8a6f2-248">System.SByte</span><span class="sxs-lookup"><span data-stu-id="8a6f2-248">System.SByte</span></span>                                                        |
|<span data-ttu-id="8a6f2-249">scriptblock</span><span class="sxs-lookup"><span data-stu-id="8a6f2-249">scriptblock</span></span>                  | <span data-ttu-id="8a6f2-250">系統管理. ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="8a6f2-250">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="8a6f2-251">securestring</span><span class="sxs-lookup"><span data-stu-id="8a6f2-251">securestring</span></span>                 | <span data-ttu-id="8a6f2-252">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="8a6f2-252">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="8a6f2-253">semver</span><span class="sxs-lookup"><span data-stu-id="8a6f2-253">semver</span></span>                       | <span data-ttu-id="8a6f2-254">SemanticVersion。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-254">System.Management.Automation.SemanticVersion</span></span>                        |
|<span data-ttu-id="8a6f2-255">short</span><span class="sxs-lookup"><span data-stu-id="8a6f2-255">short</span></span>                        | <span data-ttu-id="8a6f2-256">System.Int16</span><span class="sxs-lookup"><span data-stu-id="8a6f2-256">System.Int16</span></span>                                                        |
|<span data-ttu-id="8a6f2-257">single</span><span class="sxs-lookup"><span data-stu-id="8a6f2-257">single</span></span>                       | <span data-ttu-id="8a6f2-258">System.Single</span><span class="sxs-lookup"><span data-stu-id="8a6f2-258">System.Single</span></span>                                                       |
|<span data-ttu-id="8a6f2-259">字串</span><span class="sxs-lookup"><span data-stu-id="8a6f2-259">string</span></span>                       | <span data-ttu-id="8a6f2-260">System.String</span><span class="sxs-lookup"><span data-stu-id="8a6f2-260">System.String</span></span>                                                       |
|<span data-ttu-id="8a6f2-261">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="8a6f2-261">SupportsWildcards</span></span>            | <span data-ttu-id="8a6f2-262">SupportsWildcardsAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-262">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="8a6f2-263">switch</span><span class="sxs-lookup"><span data-stu-id="8a6f2-263">switch</span></span>                       | <span data-ttu-id="8a6f2-264">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="8a6f2-264">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="8a6f2-265">時間範圍</span><span class="sxs-lookup"><span data-stu-id="8a6f2-265">timespan</span></span>                     | <span data-ttu-id="8a6f2-266">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="8a6f2-266">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="8a6f2-267">類型</span><span class="sxs-lookup"><span data-stu-id="8a6f2-267">type</span></span>                         | <span data-ttu-id="8a6f2-268">System.Type</span><span class="sxs-lookup"><span data-stu-id="8a6f2-268">System.Type</span></span>                                                         |
|<span data-ttu-id="8a6f2-269">uint</span><span class="sxs-lookup"><span data-stu-id="8a6f2-269">uint</span></span>                         | <span data-ttu-id="8a6f2-270">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="8a6f2-270">System.UInt32</span></span>                                                       |
|<span data-ttu-id="8a6f2-271">uint16</span><span class="sxs-lookup"><span data-stu-id="8a6f2-271">uint16</span></span>                       | <span data-ttu-id="8a6f2-272">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="8a6f2-272">System.UInt16</span></span>                                                       |
|<span data-ttu-id="8a6f2-273">uint32</span><span class="sxs-lookup"><span data-stu-id="8a6f2-273">uint32</span></span>                       | <span data-ttu-id="8a6f2-274">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="8a6f2-274">System.UInt32</span></span>                                                       |
|<span data-ttu-id="8a6f2-275">uint64</span><span class="sxs-lookup"><span data-stu-id="8a6f2-275">uint64</span></span>                       | <span data-ttu-id="8a6f2-276">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="8a6f2-276">System.UInt64</span></span>                                                       |
|<span data-ttu-id="8a6f2-277">ulong</span><span class="sxs-lookup"><span data-stu-id="8a6f2-277">ulong</span></span>                        | <span data-ttu-id="8a6f2-278">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="8a6f2-278">System.UInt64</span></span>                                                       |
|<span data-ttu-id="8a6f2-279">uri</span><span class="sxs-lookup"><span data-stu-id="8a6f2-279">uri</span></span>                          | <span data-ttu-id="8a6f2-280">System.Uri</span><span class="sxs-lookup"><span data-stu-id="8a6f2-280">System.Uri</span></span>                                                          |
|<span data-ttu-id="8a6f2-281">ushort</span><span class="sxs-lookup"><span data-stu-id="8a6f2-281">ushort</span></span>                       | <span data-ttu-id="8a6f2-282">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="8a6f2-282">System.UInt16</span></span>                                                       |
|<span data-ttu-id="8a6f2-283">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="8a6f2-283">ValidateCount</span></span>                | <span data-ttu-id="8a6f2-284">ValidateCountAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-284">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="8a6f2-285">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="8a6f2-285">ValidateDrive</span></span>                | <span data-ttu-id="8a6f2-286">ValidateDriveAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-286">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="8a6f2-287">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="8a6f2-287">ValidateLength</span></span>               | <span data-ttu-id="8a6f2-288">ValidateLengthAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-288">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="8a6f2-289">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="8a6f2-289">ValidateNotNull</span></span>              | <span data-ttu-id="8a6f2-290">ValidateNotNullAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-290">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="8a6f2-291">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="8a6f2-291">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="8a6f2-292">ValidateNotNullOrEmptyAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-292">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="8a6f2-293">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="8a6f2-293">ValidatePattern</span></span>              | <span data-ttu-id="8a6f2-294">ValidatePatternAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-294">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="8a6f2-295">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="8a6f2-295">ValidateRange</span></span>                | <span data-ttu-id="8a6f2-296">ValidateRangeAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-296">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="8a6f2-297">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="8a6f2-297">ValidateScript</span></span>               | <span data-ttu-id="8a6f2-298">ValidateScriptAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-298">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="8a6f2-299">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="8a6f2-299">ValidateSet</span></span>                  | <span data-ttu-id="8a6f2-300">ValidateSetAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-300">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="8a6f2-301">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="8a6f2-301">ValidateTrustedData</span></span>          | <span data-ttu-id="8a6f2-302">ValidateTrustedDataAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-302">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="8a6f2-303">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="8a6f2-303">ValidateUserDrive</span></span>            | <span data-ttu-id="8a6f2-304">ValidateUserDriveAttribute。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-304">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="8a6f2-305">version</span><span class="sxs-lookup"><span data-stu-id="8a6f2-305">version</span></span>                      | <span data-ttu-id="8a6f2-306">System.Version</span><span class="sxs-lookup"><span data-stu-id="8a6f2-306">System.Version</span></span>                                                      |
|<span data-ttu-id="8a6f2-307">void</span><span class="sxs-lookup"><span data-stu-id="8a6f2-307">void</span></span>                         | <span data-ttu-id="8a6f2-308">System.Void</span><span class="sxs-lookup"><span data-stu-id="8a6f2-308">System.Void</span></span>                                                         |
|<span data-ttu-id="8a6f2-309">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="8a6f2-309">WildcardPattern</span></span>              | <span data-ttu-id="8a6f2-310">WildcardPattern。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-310">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="8a6f2-311">Wmi</span><span class="sxs-lookup"><span data-stu-id="8a6f2-311">wmi</span></span>                          | <span data-ttu-id="8a6f2-312">System.Management.ManagementObject</span><span class="sxs-lookup"><span data-stu-id="8a6f2-312">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="8a6f2-313">wmiclass</span><span class="sxs-lookup"><span data-stu-id="8a6f2-313">wmiclass</span></span>                     | <span data-ttu-id="8a6f2-314">ManagementClass</span><span class="sxs-lookup"><span data-stu-id="8a6f2-314">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="8a6f2-315">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="8a6f2-315">wmisearcher</span></span>                  | <span data-ttu-id="8a6f2-316">ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="8a6f2-316">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="8a6f2-317">System.security.cryptography.x509certificates.x500distinguishedname</span><span class="sxs-lookup"><span data-stu-id="8a6f2-317">X500DistinguishedName</span></span>        | <span data-ttu-id="8a6f2-318">System.security.cryptography.x509certificates.x509certificate2. System.security.cryptography.x509certificates.x500distinguishedname。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="8a6f2-319">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="8a6f2-319">X509Certificate</span></span>              | <span data-ttu-id="8a6f2-320">System.security.cryptography.x509certificates.x509certificate2. X509Certificate。</span><span class="sxs-lookup"><span data-stu-id="8a6f2-320">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="8a6f2-321">xml</span><span class="sxs-lookup"><span data-stu-id="8a6f2-321">xml</span></span>                          | <span data-ttu-id="8a6f2-322">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="8a6f2-322">System.Xml.XmlDocument</span></span>                                              |
